# aarwild_sandbox

./: .gitignore
animations/auto_brightness/: brightness_anim.py
animations/non_destructive_mesh/: bpy_curve_anim.py
animations/stretching_transform/: stretch_animation.py
animations/style_transfer/: style_transfer_anim.py
animations/tiling/: tiling_anim.py
balloon_deform/: balloon2s.py  fit_height.py  mesh_deform.py
cad/: bpy_collect_meshes.py  bpy_create_nurbs_surface_from_points.py  bpy_stitch_faces.py  cross.py  freecad_example_export_faces.py  freecad_example_export_shapedata_1.py  freecad_example_export_shapedata_2.py  grep_face_files.py  worker.py
cad/freecad/: freecad_count_objects.py  freecad_example_build_splines.py  freecad_example_export_shapedata_0.py  freecad_example_export_shapedata_1.py  freecad_split_objects.py
cad/pyocc/: bpy_example_mesh_from_pydata.py  bpy_import_cad_mesh.py  bpy_import_nurbs_non_destructive.py  grep_return_handle_type.py  plot_surface.py  pyocc_cad_deformation.py  pyocc_count_objects.py  pyocc_export_faces_from_step.py  pyocc_export_trimmed_faces.py  pyocc_export_trimmed_faces_w_stitching.py  pyocc_import_step.py  pyocc_pcurve.py  pyocc_pcurve_so.py  pyocc_pcurve_v1.py  pyocc_pcurve_v2.py
occt/: CMakeLists.txt
occt/src/: main.cpp
occt/viz/: plotface.py  plotsurf.py
pillows/: bpy_pillow_template.py  worker_pillow_template.py
portal/: bpy_create_init_blend.py  compute_mask_impl.py  create_init_blend.py  get_allowed_states.py  parse_logs.py
quick_design/: babylon_create_scene.py  babylon_download.py  blend.py  bpy_compositor.py  clean_zillow.py  compute_layouts.py  copy_zillow.py  evaluate_preprocessing.py  filter_by_color.py  fspy_compare.py  hull_quality.py  layout_generator.py  process_stock_images.py  qdtest.py  resize_image.py  scene_analysis.py  scene_test.py  synthetic_scene.py  wall_estimation.py  watermark.py
quick_design/analysis/: join_layouts.py
tiling/: brightness.py  darken_with_gradient.py  findpeak.py  imagehist.py  similarity_distribution.py  tiling_exhaustive.py  tiling_optim.py  tiling_test.py
